--- a/src/styles/_landing.scss
+++ b/src/styles/_landing.scss
@@ -77,7 +77,7 @@ section.landing-body {
             text-align: center;
             img {
                 max-width: 350px;
-                margin-top: 30px;
+                // margin-top: 30px;
             }
         }
         .cta-mid-right {
@@ -165,6 +165,9 @@ section.landing-body {
                 padding-right: 10px;
                 .recipe-title {
                     color:#c01a3b;
+                    p {
+                        font-size: 12px;
+                    }
                 }
             }
             .recipe-heading {
