texture image update

--- a/src/styles/_landing.scss
+++ b/src/styles/_landing.scss
@@ -41,6 +41,9 @@
 .eTDvSM .where-to-buy-link, .eTDvSM .LocationIcon {
     color: #f2af0c;
 }
+.mobile-logo .cJPfds img {
+    max-width: 162px;
+}
 section.landing-body {
     font-family: 'Bitter', serif;
     padding-top: 15px;
